submenu select/deselect functionality

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
     </div>
     <ul id="search-select-list">
-        <li data-value="lodge" data-selected="true">
-          <div class="li-flex">
+        <li>
+          <div class="select-item" data-value="lodge" data-selected="true">
               <div class="switch-label">
                   <span class="maki maki-lodging maki-lg"></span>
                   <div>&nbsp;Lodging</div>
@@ -41,8 +41,8 @@
               </label>
           </div>
         </li>
-        <li data-value="gallery" data-selected="true">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="gallery" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-art-gallery maki-lg"></span>
                     <div>&nbsp;Galleries</div>
@@ -54,8 +54,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="rest" data-selected="true">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="rest" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-restaurant maki-lg"></span>
                     <div>&nbsp;Restaurants</div>
@@ -67,8 +67,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="recycling">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="recycling">
                 <div class="switch-label">
                   <span class="glyphicon maki maki-waste-basket maki-lg"></span>
                   <div>&nbsp;Recycling Drop-off Locations</div>
@@ -80,8 +80,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="bus" data-selected="true">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="bus" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-bus maki-lg"></span>
                     <div>&nbsp;Public Transportation</div>
@@ -93,8 +93,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="theatre" data-selected="true">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="theatre" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-cinema maki-lg"></span>
                     <div>&nbsp;Theatre</div>
@@ -106,8 +106,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="museum" data-selected="true">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="museum" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-museum maki-lg"></span>
                     <div>&nbsp;Museum</div>
@@ -119,8 +119,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="parks">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="parks">
                 <div class="switch-label">
                     <span class="maki maki-park maki-lg"></span>
                     <div>&nbsp;Parks and Trailheads</div>
@@ -132,8 +132,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="parking">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="parking">
                 <div class="switch-label">
                     <span class="maki maki-parking maki-lg"></span>
                     <div>&nbsp;Parking</div>
@@ -145,8 +145,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="pubart">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="pubart">
                 <div class="switch-label">
                     <span class="maki maki-camera maki-lg"></span>
                     <div>&nbsp;Public Art Locations</div>
@@ -158,8 +158,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="walk" data-selected="true">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="walk" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-pitch maki-lg"></span>
                     <div>&nbsp;Suggested Walking Routes</div>
@@ -171,8 +171,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="traffic">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="traffic">
                 <div class="switch-label">
                     <span class="maki maki-car maki-lg"></span>
                     <div>&nbsp;Real-time Traffic (red heavy)</div>
@@ -184,8 +184,8 @@
                 </label>
             </div>
         </li>
-        <li data-value="tours">
-            <div class="li-flex">
+        <li>
+            <div class="select-item" data-value="tours">
                 <div class="switch-label">
                     <span>+</span>
                     <div>&nbsp;Tours</div>
@@ -198,8 +198,8 @@
             </div>
 
             <ul class="children">
-                <li data-value="air">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="air">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Air</div>
@@ -211,8 +211,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="astronomy">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="astronomy">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Astronomy</div>
@@ -224,8 +224,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="bike-segway">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="bike-segway">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Bike+Segway</div>
@@ -237,8 +237,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="ground">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="ground">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Ground</div>
@@ -250,8 +250,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="private">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="private">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Private</div>
@@ -263,8 +263,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="jeep-trolley">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="jeep-trolley">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Jeep+Trolley</div>
@@ -276,8 +276,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="specialty">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="specialty">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Specialty</div>
@@ -289,8 +289,8 @@
                         </label>
                     </div>
                 </li>
-                <li data-value="wine">
-                    <div class="li-flex">
+                <li>
+                    <div class="select-item" data-value="wine">
                         <div class="switch-label">
                             <span>+</span>
                             <div>&nbsp;Wine</div>
