add tours layers

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="select-item" data-value="bike-segway">
+                    <div class="select-item" data-value="bikesegway">
                         <div class="switch-label">
                             <span></span>
                             <div>&nbsp;Bike+Segway</div>
@@ -251,7 +251,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="select-item" data-value="jeep-trolley">
+                    <div class="select-item" data-value="jeeptrolley">
                         <div class="switch-label">
                             <span></span>
                             <div>&nbsp;Jeep+Trolley</div>
