fix no results styling

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <li>
             <div class="select-item parent" data-value="tours">
                 <div class="switch-label">
-                    <span class="parent-icon glyphicon glyphicon-plus"></span>
+                    <span class="icon glyphicon glyphicon-plus"></span>
                     <div>&nbsp;Tours</div>
                 </div>
 
@@ -304,7 +304,11 @@
                 </label>
             </div>
         </li>
-        <li id="no-results" style="display: none;"></li>
+        <li id="no-results" style="display: none;">
+            <div class="select-item">
+                <div class="switch-label"></div>
+            </div>
+        </li>
     </ul>
 </div>
 <button id="hamburger" class="hamburger hamburger--squeeze" type="button" onclick="toggleNav()">
