fix drop down icon

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <li>
             <div class="select-item parent" data-value="tours">
                 <div class="switch-label">
-                    <span class="icon glyphicon glyphicon-plus"></span>
+                    <span class="parent-icon icon glyphicon glyphicon-plus"></span>
                     <div>&nbsp;Tours</div>
                 </div>
 
