--- a/index.html
+++ b/index.html
@@ -30,23 +30,10 @@
     </div>
     <ul id="search-select-list">
         <li>
-          <div class="select-item" data-value="lodge" data-selected="true">
-              <div class="switch-label">
-                  <span class="maki maki-lodging maki-lg"></span>
-                  <div>&nbsp;Lodging</div>
-              </div>
-
-              <label class="switch ">
-                  <input type="checkbox" class="default">
-                  <span class="slider round"></span>
-              </label>
-          </div>
-        </li>
-        <li>
             <div class="select-item" data-value="gallery" data-selected="true">
                 <div class="switch-label">
                     <span class="maki maki-art-gallery maki-lg"></span>
-                    <div>&nbsp;Galleries</div>
+                    <div>&nbsp;Art Galleries</div>
                 </div>
 
                 <label class="switch ">
@@ -60,97 +47,6 @@
                 <div class="switch-label">
                     <span class="maki maki-restaurant maki-lg"></span>
                     <div>&nbsp;Restaurants</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="recycling">
-                <div class="switch-label">
-                  <span class="glyphicon maki maki-waste-basket maki-lg"></span>
-                  <div>&nbsp;Recycling Drop-off</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="bus" data-selected="true">
-                <div class="switch-label">
-                    <span class="maki maki-bus maki-lg"></span>
-                    <div>&nbsp;Public Transportation</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="theatre" data-selected="true">
-                <div class="switch-label">
-                    <span class="maki maki-cinema maki-lg"></span>
-                    <div>&nbsp;Theatre</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="museum" data-selected="true">
-                <div class="switch-label">
-                    <span class="maki maki-museum maki-lg"></span>
-                    <div>&nbsp;Museum</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="parks">
-                <div class="switch-label">
-                    <span class="maki maki-park maki-lg"></span>
-                    <div>&nbsp;Parks and Trailheads</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="pubart">
-                <div class="switch-label">
-                    <span class="maki maki-camera maki-lg"></span>
-                    <div>&nbsp;Public Art Locations</div>
-                </div>
-
-                <label class="switch ">
-                    <input type="checkbox" class="default">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </li>
-        <li>
-            <div class="select-item" data-value="walk" data-selected="true">
-                <div class="switch-label">
-                    <span class="maki maki-pitch maki-lg"></span>
-                    <div>&nbsp;Suggested Walking Route</div>
                 </div>
 
                 <label class="switch ">
@@ -199,6 +95,45 @@
                     </div>
                 </li>
             </ul>
+        </li>
+        <li>
+            <div class="select-item" data-value="bus" data-selected="true">
+                <div class="switch-label">
+                    <span class="maki maki-bus maki-lg"></span>
+                    <div>&nbsp;Public Transportation</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="theatre" data-selected="true">
+                <div class="switch-label">
+                    <span class="maki maki-cinema maki-lg"></span>
+                    <div>&nbsp;Theatre</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="museum" data-selected="true">
+                <div class="switch-label">
+                    <span class="maki maki-museum maki-lg"></span>
+                    <div>&nbsp;Museum</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
         </li>
         <li>
             <div class="select-item parent" data-value="tours">
@@ -321,10 +256,88 @@
             </ul>
         </li>
         <li>
+            <div class="select-item" data-value="parks">
+                <div class="switch-label">
+                    <span class="maki maki-park maki-lg"></span>
+                    <div>&nbsp;Parks and Trailheads</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="water">
+                <div class="switch-label">
+                    <span class="maki maki-water maki-lg"></span>
+                    <div>&nbsp;Water Fill-up Stations</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+          <div class="select-item" data-value="lodge">
+              <div class="switch-label">
+                  <span class="maki maki-lodging maki-lg"></span>
+                  <div>&nbsp;Lodging</div>
+              </div>
+
+              <label class="switch ">
+                  <input type="checkbox" class="default">
+                  <span class="slider round"></span>
+              </label>
+          </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="pubart">
+                <div class="switch-label">
+                    <span class="maki maki-camera maki-lg"></span>
+                    <div>&nbsp;Public Art Locations</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="walk" data-selected="true">
+                <div class="switch-label">
+                    <span class="maki maki-pitch maki-lg"></span>
+                    <div>&nbsp;Suggested Walking Route</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
             <div class="select-item" data-value="traffic">
                 <div class="switch-label">
                     <span class="maki maki-car maki-lg"></span>
                     <div>&nbsp;Real-time Traffic (red heavy)</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="recycling">
+                <div class="switch-label">
+                  <span class="glyphicon maki maki-waste-basket maki-lg"></span>
+                  <div>&nbsp;Recycling Drop-off</div>
                 </div>
 
                 <label class="switch ">
