retail and churhces work

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             </div>
         </li>
         <li>
-            <div class="select-item parent" data-value="parking">
+            <div class="select-item parent" data-value="park">
                 <div class="switch-label">
-                    <span class="fuel-icon icon glyphicon glyphicon-plus"></span>
+                    <span class="parent-icon icon glyphicon glyphicon-plus"></span>
                     <div>&nbsp;Parking</div>
                 </div>
 
@@ -254,6 +254,20 @@
                     </div>
                 </li>
             </ul>
+        </li>
+
+        <li>
+            <div class="select-item" data-value="church">
+                <div class="switch-label">
+                    <span class="maki maki-town-hall maki-lg"></span>
+                    <div>&nbsp;Churches</div>
+                </div>
+
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
         </li>
         <li>
             <div class="select-item" data-value="parks">
