--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
 <script src='app/js/customsearch.min.js'></script>
-<script src='app/app.min.js'></script>
+<script src='app/app.js'></script>
 <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet' />
 <link href='app/css/app.min.css' rel='stylesheet' />
 </head>
@@ -91,7 +91,7 @@
             </div>
             <ul class="children">
                 <li>
-                    <div class="select-item" data-value="air">
+                    <div class="select-item" data-value="activities">
                         <div class="switch-label">
                             <span class="maki maki-school maki-lg"></span>
                             <div>&nbsp;Activities</div>
