--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
 <script src='app/js/customsearch.min.js'></script>
-<script src='app/app.js'></script>
+<script src='app/app.min.js'></script>
 <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet' />
 <link href='app/css/app.min.css' rel='stylesheet' />
 </head>
@@ -468,6 +468,18 @@
                 <div class="switch-label">
                     <span class="maki maki-park maki-lg"></span>
                     <div>&nbsp;Parks and Trailheads</div>
+                </div>
+                <label class="switch ">
+                    <input type="checkbox" class="default">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </li>
+        <li>
+            <div class="select-item" data-value="toilets">
+                <div class="switch-label">
+                    <span class="maki maki-toilets maki-lg"></span>
+                    <div>&nbsp;Public Restrooms</div>
                 </div>
                 <label class="switch ">
                     <input type="checkbox" class="default">
