--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
 <script src='app/js/customsearch.min.js'></script>
-<script src='app/app.js'></script>
+<script src='app/app.min.js'></script>
 <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet' />
 <link href='app/css/app.min.css' rel='stylesheet' />
 </head>
@@ -91,10 +91,22 @@
             </div>
             <ul class="children">
                 <li>
-                    <div class="select-item" data-value="activities">
+                    <div class="select-item" data-value="what2do-entertainment">
                         <div class="switch-label">
-                            <span class="maki maki-school maki-lg"></span>
-                            <div>&nbsp;Activities</div>
+                            <span class="maki maki-zoo maki-lg"></span>
+                            <div>&nbsp;Attractions & Entertainment</div>
+                        </div>
+                        <label class="switch ">
+                            <input type="checkbox" class="default">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="select-item" data-value="what2do-recreation">
+                        <div class="switch-label">
+                            <span class="maki maki-wetland maki-lg"></span>
+                            <div>&nbsp;Outdoor Recreation</div>
                         </div>
                         <label class="switch ">
                             <input type="checkbox" class="default">
